# llm-observability-kit

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: golden.json  run.py
examples/: slack_alerter.py  walkthrough.md
fixtures/: generate.py  production-1hour.jsonl
src/llm_observability/: __init__.py  aggregator.py  alerts.py  cli.py  tracer.py
tests/: test_aggregator.py  test_alerts.py  test_tracer.py
